deployment/kustomize/environments/staging/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ods
      service: ui
  template:
    metadata:
      labels:
        app: ods
        service: ui
    spec:
      containers:
        - name: ui-service
