deployment/kustomize/environments/staging/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
  - http:
      paths:
      - path: /api/transformation(/|$)(.*)
        backend:
          serviceName: transformation-service
          servicePort: 8080
      - path: /api/storage(/|$)(.*)
        backend:
          serviceName: storage-service
          servicePort: 3000
      - path: /
        backend:
          serviceName: ui-service
          servicePort: 8080
